trunk/3rdParty/Sciter/api/sciter-x-dom.h


EXTERN_C SCDOM_RESULT SCAPI Sciter_UseElement(HELEMENT he);
EXTERN_C SCDOM_RESULT SCAPI Sciter_UnuseElement(HELEMENT he);
EXTERN_C SCDOM_RESULT SCAPI SciterGetRootElement(HWND hwnd, HELEMENT *phe);
EXTERN_C SCDOM_RESULT SCAPI SciterGetFocusElement(HWND hwnd, HELEMENT *phe);
EXTERN_C SCDOM_RESULT SCAPI SciterFindElement(HWND hwnd, POINT pt, HELEMENT* phe);
EXTERN_C SCDOM_RESULT SCAPI SciterGetChildrenCount(HELEMENT he, UINT* count);
EXTERN_C SCDOM_RESULT SCAPI SciterGetNthChild(HELEMENT he, UINT n, HELEMENT* phe);
EXTERN_C SCDOM_RESULT SCAPI SciterGetParentElement(HELEMENT he, HELEMENT* p_parent_he);
 EXTERN_C SCDOM_RESULT SCAPI SciterGetElementHtml(HELEMENT he, LPBYTE* utf8bytes, BOOL outer);
 EXTERN_C SCDOM_RESULT SCAPI SciterGetElementText(HELEMENT he, LPWSTR* utf16);
 EXTERN_C SCDOM_RESULT SCAPI SciterSetElementText(HELEMENT he, LPCWSTR utf16, UINT length);
 EXTERN_C SCDOM_RESULT SCAPI SciterGetAttributeCount(HELEMENT he, LPUINT p_count);
EXTERN_C SCDOM_RESULT SCAPI SciterGetNthAttribute(HELEMENT he, UINT n, LPCSTR* p_name, LPCWSTR* p_value);
EXTERN_C SCDOM_RESULT SCAPI SciterGetAttributeByName(HELEMENT he, LPCSTR name, LPCWSTR* p_value);
EXTERN_C SCDOM_RESULT SCAPI SciterSetAttributeByName(HELEMENT he, LPCSTR name, LPCWSTR value);
EXTERN_C SCDOM_RESULT SCAPI SciterClearAttributes(HELEMENT he);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementIndex(HELEMENT he, LPUINT p_index);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementType(HELEMENT he, LPCSTR* p_type);
EXTERN_C SCDOM_RESULT SCAPI SciterGetStyleAttribute(HELEMENT he, LPCSTR name, LPCWSTR* p_value);
EXTERN_C SCDOM_RESULT SCAPI SciterSetStyleAttribute(HELEMENT he, LPCSTR name, LPCWSTR value);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementLocation(HELEMENT he, LPRECT p_location, UINT areas );
EXTERN_C SCDOM_RESULT SCAPI SciterScrollToView(HELEMENT he, BOOL toTopOfView);
EXTERN_C SCDOM_RESULT SCAPI SciterUpdateElement(HELEMENT he, BOOL renderNow);
EXTERN_C SCDOM_RESULT SCAPI SciterSetCapture(HELEMENT he);
EXTERN_C SCDOM_RESULT SCAPI SciterReleaseCapture(HELEMENT he);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementHwnd(HELEMENT he, HWND* p_hwnd, BOOL rootWindow);
EXTERN_C SCDOM_RESULT SCAPI SciterCombineURL(HELEMENT he, LPWSTR szUrlBuffer, DWORD UrlBufferSize);
typedef BOOL CALLBACK SciterElementCallback( HELEMENT he, LPVOID param );
EXTERN_C SCDOM_RESULT SCAPI SciterSelectElements(
          HELEMENT  he, 
          LPCSTR    CSS_selectors,
          SciterElementCallback* 
                    callback, 
          LPVOID    param);
EXTERN_C SCDOM_RESULT SCAPI SciterSelectParent(
          HELEMENT  he, 
          LPCSTR    selector,
          UINT      depth,
           HELEMENT* heFound);
enum SET_ELEMENT_HTML
{
  SIH_REPLACE_CONTENT     = 0, 
  SIH_INSERT_AT_START     = 1,
  SIH_APPEND_AFTER_LAST   = 2, 
  SOH_REPLACE             = 3,
  SOH_INSERT_BEFORE       = 4,
  SOH_INSERT_AFTER        = 5  
};
EXTERN_C SCDOM_RESULT SCAPI SciterSetElementHtml(HELEMENT he, const BYTE* html, DWORD htmlLength, UINT where);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementUID(HELEMENT he, UINT* puid);
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementByUID(HWND hwnd, UINT uid, HELEMENT* phe);
EXTERN_C SCDOM_RESULT SCAPI SciterShowPopup(HELEMENT hePopup, HELEMENT heAnchor, UINT placement);
EXTERN_C SCDOM_RESULT SCAPI SciterShowPopupAt(HELEMENT hePopup, POINT pos, BOOL animate);
EXTERN_C SCDOM_RESULT SCAPI SciterHidePopup(HELEMENT he);
enum ELEMENT_STATE_BITS 
{
  STATE_LINK     = 0x0001, 
  STATE_HOVER    = 0x0002, 
  STATE_ACTIVE   = 0x0004, 
  STATE_FOCUS    = 0x0008, 
  STATE_VISITED  = 0x0010, 
  STATE_CURRENT  = 0x0020, 
  STATE_CHECKED  = 0x0040, 
  STATE_DISABLED = 0x0080, 
  STATE_READONLY = 0x0100, 
  STATE_EXPANDED = 0x0200, 
  STATE_COLLAPSED= 0x0400, 
  STATE_INCOMPLETE = 0x0800,      
  STATE_ANIMATING  = 0x00001000,  
  STATE_FOCUSABLE  = 0x00002000,  
  STATE_ANCHOR     = 0x00004000,  
  STATE_SYNTHETIC  = 0x00008000,  
  STATE_OWNS_POPUP = 0x00010000,  
  STATE_TABFOCUS   = 0x00020000,  
  STATE_EMPTY      = 0x00040000,  
  STATE_BUSY       = 0x00080000,  
  STATE_DRAG_OVER  = 0x00100000,  
  STATE_DROP_TARGET= 0x00200000,  
  STATE_MOVING     = 0x00400000,  
  STATE_COPYING    = 0x00800000,  
  STATE_POPUP      = 0x40000000,    
  STATE_PRESSED    = 0x04000000,    
  STATE_HAS_CHILDREN = 0x02000000,  
  STATE_HAS_CHILD    = 0x01000000,  
};
EXTERN_C SCDOM_RESULT SCAPI SciterGetElementState( HELEMENT he, UINT* pstateBits);
EXTERN_C SCDOM_RESULT SCAPI SciterSetElementState( HELEMENT he, UINT stateBitsToSet, UINT stateBitsToClear, BOOL updateView);
EXTERN_C SCDOM_RESULT SCAPI SciterCreateElement( LPCSTR tagname, LPCWSTR textOrNull,  HELEMENT *phe );
      struct callback 
      {
        virtual bool on_element(HELEMENT he) = 0;
      };