desktop/Expemerent.UI/Native/SciterDomApi.cs

using System;
using System.Collections.Generic;
using System.Diagnostics;
using System.Drawing;
using System.Security;
using System.Runtime.InteropServices;
using System.Text;
using Expemerent.UI.Dom;
using Expemerent.UI.Behaviors;

namespace Expemerent.UI.Native
{
    #region Sciter dom interface
    /// <summary>
    /// Sciter dom interface
    /// </summary>
    [SuppressUnmanagedCodeSecurityAttribute]
    internal partial class SciterDomApi
    {
        #region Function prototypes

        /// <summary>
        /// Marks DOM object as unused (a.k.a. AddRef).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll, EntryPoint="Sciter_UseElement")]
        private static extern ScDomResult SciterUseElement(IntPtr he);

        /// <summary>
        /// Marks DOM object as unused (a.k.a. Release). Get handle of every element's child element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll, EntryPoint="Sciter_UnuseElement")]
        private static extern ScDomResult SciterUnuseElement(IntPtr he);

        /// <summary>
        /// Get root DOM element of HTML document.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetRootElement(IntPtr hwnd, out IntPtr phe);

        /// <summary>
        /// Get focused DOM element of HTML document.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetFocusElement(IntPtr hwnd, IntPtr phe);

        /// <summary>
        /// Find DOM element by coordinate.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterFindElement(IntPtr hwnd, Point pt, out IntPtr phe);

        /// <summary>
        /// Get number of child elements.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetChildrenCount(IntPtr he, out int count);

        /// <summary>
        /// Get handle of every element's child element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetNthChild(IntPtr he, int n, out IntPtr phe);

        /// <summary>
        /// Get parent element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetParentElement(IntPtr he, out IntPtr p_parent_he);

        /// <summary>
        /// Get text of the element and information where child elements are placed.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementHtml(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr utf8bytes, bool outer);

        /// <summary>
        /// Get inner text of the element as LPWSTR (utf16 words).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementText(IntPtr he, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr utf16words);

        /// <summary>
        /// Set inner text of the element from LPCWSTR buffer (utf16 words).
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetElementText(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] string utf16words, int length);

        /// <summary>
        /// Get number of element's attributes.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetAttributeCount(IntPtr he, out int p_count);

        /// <summary>
        /// Get value of any element's attribute by attribute's number.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetNthAttribute(IntPtr he, int n, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr p_name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Get value of any element's attribute by name.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetAttributeByName(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Set attribute's value.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetAttributeByName(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, [MarshalAs(UnmanagedType.LPWStr)] String value);

        /// <summary>
        /// Remove all attributes from the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterClearAttributes(IntPtr he);

        /// <summary>
        /// Get element index. 
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementIndex(IntPtr he, out int p_index);

        /// <summary>
        /// Get element's text.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementType(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ out IntPtr p_type);

        /// <summary>
        /// Get element's style attribute.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetStyleAttribute(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, /*[MarshalAs(UnmanagedType.LPWStr)]*/ out IntPtr p_value);

        /// <summary>
        /// Set element's style attribute.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetStyleAttribute(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] name, [MarshalAs(UnmanagedType.LPWStr)] String value);

        /// <summary>
        /// Get bounding rectangle of the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementLocation(IntPtr he, out Rectangle p_location, ELEMENT_AREA areas);

        /// <summary>
        /// Scroll to view.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterScrollToView(IntPtr he, bool toTopOfView);

        /// <summary>
        /// Apply changes and refresh element area in its window.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterUpdateElement(IntPtr he, bool renderNow);

        /// <summary>
        /// refresh element area in its window.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterRefreshArea(IntPtr he, Rectangle rc);

        /// <summary>
        /// Set the mouse capture to the specified element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetCapture(IntPtr he);

        /// <summary>
        /// Releases the mouse capture from the specified element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterReleaseCapture(IntPtr he);

        /// <summary>
        /// Get IntPtr of containing window.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementHwnd(IntPtr he, out IntPtr p_IntPtr, bool rootWindow);

        /// <summary>
        /// Combine given URL with URL of the document element belongs to.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterCombineURL(IntPtr he, [MarshalAs(UnmanagedType.LPWStr)] StringBuilder szUrlBuffer, int urlBufferSize);

        /// <summary>
        /// Call specified function for every element in a DOM that meets specified CSS selectors.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSelectElements(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] CSS_selectors, [MarshalAs(UnmanagedType.FunctionPtr)] SciterElementCallback callback, IntPtr param);

        /// <summary>
        /// Find parent of the element by CSS selector. 
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSelectParent(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] selector, int depth, out IntPtr heFound);

        /// <summary>
        /// Set inner or outer html of the element.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetElementHtml(IntPtr he, /*[MarshalAs(UnmanagedType.LPStr)]*/ byte[] html, int htmlLength, SET_ELEMENT_HTML where);

        /// <summary>
        /// Get Element UID.
        /// </summary>
        /// <remarks>Element UID support functions. 
        /// Element UID is unique identifier of the DOM element. 
        /// UID is suitable for storing it in structures associated with the view/document.
        /// Access to the element using IntPtr is more effective but table space of handles is limited.
        /// It is not recommended to store IntPtr handles between function calls.
        /// </remarks>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementUID(IntPtr he, out int puid);

        /// <summary>
        /// Get Element handle by its UID.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementByUID(IntPtr hwnd, int uid, out IntPtr phe);

        /// <summary>
        /// Shows block element (DIV) in popup window.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterShowPopup(IntPtr hePopup, IntPtr heAnchor, POPUP_PLACEMENT placement);

        /// <summary>
        /// Shows block element (DIV) in popup window at given position.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterShowPopupAt(IntPtr hePopup, Point pos, bool animate);

        /// <summary>
        /// Removes popup window.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterHidePopup(IntPtr he);

        /// <summary>
        /// Get/set state bits, stateBits*** accept or'ed values above
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterGetElementState(IntPtr he, out ELEMENT_STATE_BITS pstateBits);

        /// <summary>
        /// Get/set state bits, stateBits*** accept or'ed values above
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterSetElementState(IntPtr he, ELEMENT_STATE_BITS stateBitsToSet, ELEMENT_STATE_BITS stateBitsToClear, bool updateView);

        /// <summary>
        /// Create Element.CreateElement, the element is disconnected initially from the DOM. 
        /// Element created with ref_count = 1 thus you must call Sciter_UnuseElement on returned handler.
        /// </summary>
        [DllImport(SciterHostApi.SciterDll)]
        private static extern ScDomResult SciterCreateElement(/*[MarshalAs(UnmanagedType.LPStr)]*/ Byte[] tagname, [MarshalAs(UnmanagedType.LPWStr)] String textOrNull, out IntPtr phe);
